unpackaged/main/default/objects/Application__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>Account__r.Id</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>