unpackaged/main/default/objects/Application__c/fields/Applicant_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Mobile_Phone__c</fullName>
    <label>Applicant Mobile Phone</label>
    <type>Phone</type>
</CustomField>