unpackaged/main/default/objects/Application__c/fields/Change_the_World_Interest__c.field-meta.xml
<CustomField>
    <fullName>Change_the_World_Interest__c</fullName>
    <description>Field created to migrate data from the CTW Interest field on the lead and opportunity (July 2021)</description>
    <label>Change the World Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>