unpackaged/main/default/objects/Application__c/fields/Channel_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Channel_Subtype__c</fullName>
    <description>This field was requested by the Partner Relations and College Counseling teams. It indicates the type of pathway a student can follow for guaranteed admission to the channel partner school. The pathway may be guaranteed no matter what (Spring Start), or guaranteed only after successful completion of a Verto semester (Scholars).</description>
    <inlineHelpText>Indicates the type of pathway a student can follow for guaranteed admission to the channel partner school. The pathway may be guaranteed no matter what (Spring Start), or guaranteed only after successful completion of a Verto semester (Scholars).</inlineHelpText>
    <label>Channel Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring Start</fullName>
            </value>
            <value>
                <fullName>Scholars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>