unpackaged/main/default/objects/Application__c/fields/College_Plans__c.field-meta.xml
<CustomField>
    <fullName>College_Plans__c</fullName>
    <description>Field created to migrate data from the &quot;Your college plans&quot; field on the lead and opportunity (July 2021)</description>
    <label>College Plans</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>