unpackaged/main/default/objects/Application__c/fields/College_Previously_Attended__c.field-meta.xml
<CustomField>
    <fullName>College_Previously_Attended__c</fullName>
    <description>Field created to migrate data from the College Previously Attended field on the lead and opportunity (July 2021)</description>
    <label>College Previously Attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>