unpackaged/main/default/objects/Application__c/fields/Criminal_Conviction__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction__c</fullName>
    <description>Form Question: &quot;Do you have any criminal convictions in any country?&quot;</description>
    <inlineHelpText>Form Question: &quot;Do you have any criminal convictions in any country?&quot;</inlineHelpText>
    <label>Criminal Conviction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>