unpackaged/main/default/objects/Application__c/fields/Criminal_Conviction_Details__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction_Details__c</fullName>
    <label>Criminal Conviction Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>