unpackaged/main/default/objects/Application__c/fields/Disciplinary_Violation__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Violation__c</fullName>
    <description>Form Question: &quot;Have you ever been involved in a disciplinary situation at any educational institution you have attended from the 9th grade (or the international equivalent) forward, whether related to academic misconduct or behavioral misconduct?&quot;</description>
    <inlineHelpText>Form Question: &quot;Have you ever been involved in a disciplinary situation at any educational institution you have attended from the 9th grade (or the international equivalent) forward, whether related to academic misconduct or behavioral misconduct?&quot;</inlineHelpText>
    <label>Disciplinary Violation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>