unpackaged/main/default/objects/Application__c/fields/Disciplinary_Violation_Details__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Violation_Details__c</fullName>
    <label>Disciplinary Violation Details</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>