unpackaged/main/default/objects/Application__c/fields/Dual_Citizenship_Country__c.field-meta.xml
<CustomField>
    <fullName>Dual_Citizenship_Country__c</fullName>
    <description>Field created to migrate data from the &quot;Dual Citizenship&quot; field on the lead and opportunity (July 2021)</description>
    <label>Dual Citizenship Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>