unpackaged/main/default/objects/Application__c/fields/Estimated_Age__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Age__c</fullName>
    <formula>(today() -  Date_of_Birth__c)/365</formula>
    <label>Estimated Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>