unpackaged/main/default/objects/Application__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>The applicant&#39;s unique ID in the partner college&#39;s database</description>
    <inlineHelpText>The applicant&#39;s unique ID in the partner college&#39;s database</inlineHelpText>
    <label>External ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>