unpackaged/main/default/objects/Application__c/fields/First_Generation_College_Student__c.field-meta.xml
<CustomField>
    <fullName>First_Generation_College_Student__c</fullName>
    <description>Form Question: &quot;Do you define yourself as a first-generation college student? (A first-generation college student is defined as a student whose parent(s)/legal guardian(s) have not completed a bachelor’s degree.)&quot;</description>
    <inlineHelpText>Form Question: &quot;Do you define yourself as a first-generation college student? (A first-generation college student is defined as a student whose parent(s)/legal guardian(s) have not completed a bachelor’s degree.)&quot;</inlineHelpText>
    <label>First Generation College Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>