unpackaged/main/default/objects/Application__c/fields/Gender_Details__c.field-meta.xml
<CustomField>
    <fullName>Gender_Details__c</fullName>
    <description>Form Question: &quot;If you would like the opportunity, we invite you to share more about your gender identity.&quot;</description>
    <inlineHelpText>Form Question: &quot;If you would like the opportunity, we invite you to share more about your gender identity.&quot;</inlineHelpText>
    <label>Gender Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>