unpackaged/main/default/objects/Application__c/fields/GPA_Scale__c.field-meta.xml
<CustomField>
    <fullName>GPA_Scale__c</fullName>
    <label>GPA Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GPA_Scale</valueSetName>
    </valueSet>
</CustomField>