unpackaged/main/default/objects/Application__c/fields/GPA_Weighting__c.field-meta.xml
<CustomField>
    <fullName>GPA_Weighting__c</fullName>
    <description>Field created to migrate data from the GPA Weighting field on the lead and opportunity (July 2021)</description>
    <label>GPA Weighting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weighted</fullName>
            </value>
            <value>
                <fullName>Unweighted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>