unpackaged/main/default/objects/Application__c/fields/High_School__c.field-meta.xml
<CustomField>
    <fullName>High_School__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The high school that the applicant attended</description>
    <label>High School</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The high school that the applicant attended</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>High School Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (High School)</relationshipLabel>
    <relationshipName>Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>