unpackaged/main/default/objects/Application__c/fields/High_School_Counselor_Email__c.field-meta.xml
<CustomField>
    <fullName>High_School_Counselor_Email__c</fullName>
    <label>High School Counselor Email</label>
    <type>Email</type>
</CustomField>