unpackaged/main/default/objects/Application__c/fields/High_School_Counselor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>High_School_Counselor_First_Name__c</fullName>
    <label>High School Counselor First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>