unpackaged/main/default/objects/Application__c/fields/High_School_Counselor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>High_School_Counselor_Last_Name__c</fullName>
    <label>High School Counselor Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>