unpackaged/main/default/objects/Application__c/fields/High_School_Counselor_Phone__c.field-meta.xml
<CustomField>
    <fullName>High_School_Counselor_Phone__c</fullName>
    <description>Field created to migrate data from the High School Counselor Phone field on the lead and opportunity (July 2021)</description>
    <label>High School Counselor Phone</label>
    <type>Phone</type>
</CustomField>