unpackaged/main/default/objects/Application__c/fields/High_School_Experience__c.field-meta.xml
<CustomField>
    <fullName>High_School_Experience__c</fullName>
    <description>Field created to migrate data from the &quot;High School Experience&quot; field on the lead and opportunity (July 2021)</description>
    <inlineHelpText>Form Question: &quot;Tell us more about your high school and academic achievements.&quot;</inlineHelpText>
    <label>High School Experience</label>
    <length>1100</length>
    <type>LongTextArea</type>
</CustomField>