unpackaged/main/default/objects/Application__c/fields/Historical__c.field-meta.xml
<CustomField>
    <fullName>Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is true for all applications submitted prior to the rebuild of the application salesforce structure that took place for Project Rome (May 2021)</description>
    <label>Historical</label>
    <type>Checkbox</type>
</CustomField>