unpackaged/main/default/objects/Application__c/fields/Interested_in_Opportunity_Grant__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Opportunity_Grant__c</fullName>
    <description>Field created to migrate data from the Opp Grant Interest field on the lead and opportunity (July 2021)</description>
    <label>Interested in Opportunity Grant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>