unpackaged/main/default/objects/Application__c/fields/International_Student__c.field-meta.xml
<CustomField>
    <fullName>International_Student__c</fullName>
    <description>Field created to migrate data from the &quot;Are you an International Student?&quot; field on the lead and opportunity (July 2021)</description>
    <label>International Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>