unpackaged/main/default/objects/Application__c/fields/Location_Interest__c.field-meta.xml
<CustomField>
    <fullName>Location_Interest__c</fullName>
    <description>Field created to migrate data from the &quot;Which Semesters Interest You Most&quot; field on the old version of the channel enrollment application (May 2021) and from the &quot;Which Verto Semesters Interest You Most?&quot; field on the lead and opportunity (July 2021)</description>
    <label>Location Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Antarctica</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Australia, New Zealand &amp; Pacific Islands</fullName>
            </value>
            <value>
                <fullName>Campus Semester in  Costa Rica &amp; The Dominican Republic</fullName>
            </value>
            <value>
                <fullName>Campus Semester in England</fullName>
            </value>
            <value>
                <fullName>Campus Semester in England, Italy, Spain</fullName>
            </value>
            <value>
                <fullName>Campus Semester in Italy</fullName>
            </value>
            <value>
                <fullName>Campus Semester in Italy (Fall 2021+)</fullName>
            </value>
            <value>
                <fullName>Campus Semester in London</fullName>
            </value>
            <value>
                <fullName>Campus Semester in Spain</fullName>
            </value>
            <value>
                <fullName>Campus STEM Semester in Costa Rica</fullName>
            </value>
            <value>
                <fullName>Change The World</fullName>
            </value>
            <value>
                <fullName>China, Thailand, &amp; Laos</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>CR/DR</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Field Semester in China, Laos &amp; Thailand</fullName>
            </value>
            <value>
                <fullName>Field Semester in Costa Rica</fullName>
            </value>
            <value>
                <fullName>Field Semester in Costa Rica/Hawaii</fullName>
            </value>
            <value>
                <fullName>Field Semester in Costa Rica	&amp; The Dominican Republic</fullName>
            </value>
            <value>
                <fullName>Field Semester in CR/Hawaii</fullName>
            </value>
            <value>
                <fullName>Field Semester in Fiji</fullName>
            </value>
            <value>
                <fullName>Field Semester in Fiji, New Zealand, &amp; Australia</fullName>
            </value>
            <value>
                <fullName>Field Semester in Hawaii</fullName>
            </value>
            <value>
                <fullName>Field Semester in Latin America</fullName>
            </value>
            <value>
                <fullName>Field semester in the South Pacific (Fiji, New Zealand, &amp; Australia)</fullName>
            </value>
            <value>
                <fullName>Global Impact Semester (Fall 2020 Only)</fullName>
            </value>
            <value>
                <fullName>Global Impact Year (Fall 2020 &amp; Spring 2021)</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>