unpackaged/main/default/objects/Application__c/fields/Other_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Referral_Source__c</fullName>
    <description>If the applicant selects Other in response to the application question &quot;How did you hear about Verto?&quot;, this field is their explanation of Other.</description>
    <inlineHelpText>If the applicant selects Other in response to the application question &quot;How did you hear about Verto?&quot;, this field is their explanation of Other.</inlineHelpText>
    <label>Other Referral Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>