unpackaged/main/default/objects/Application__c/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <description>The URL of the first paid ad page that the person who submitted the application ever visited</description>
    <label>Page URL First Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>