unpackaged/main/default/objects/Application__c/fields/Page_URL_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>Page_URL_Last_Touch__c</fullName>
    <description>The URL of the most recent paid ad page that the person who submitted the application has visited</description>
    <label>Page URL Last Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>