unpackaged/main/default/objects/Application__c/fields/Parent_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Email__c</fullName>
    <label>Parent/Guardian Email</label>
    <type>Email</type>
</CustomField>