unpackaged/main/default/objects/Application__c/fields/Parent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_First_Name__c</fullName>
    <label>Parent/Guardian First Name</label>
    <type>TextArea</type>
</CustomField>