unpackaged/main/default/objects/Application__c/fields/Parent_Guardian_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_2_Email__c</fullName>
    <label>Parent/Guardian 2 Email</label>
    <type>Email</type>
</CustomField>