unpackaged/main/default/objects/Application__c/fields/Parent_Guardian_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_2_Phone__c</fullName>
    <label>Parent/Guardian 2 Phone</label>
    <type>Phone</type>
</CustomField>