unpackaged/main/default/objects/Application__c/fields/Parent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Last_Name__c</fullName>
    <label>Parent/Guardian Last Name</label>
    <type>TextArea</type>
</CustomField>