unpackaged/main/default/objects/Application__c/fields/Parents_Guardians_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Parents_Guardians_Marital_Status__c</fullName>
    <description>Field created to migrate data from the &quot;Parents Marital Status&quot; field on the lead and opportunity (July 2021)</description>
    <label>Parents/Guardians Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil Union/ Domestic Partners</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Never Married</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>