unpackaged/main/default/objects/Application__c/fields/Post_Verto_Institution_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Post_Verto_Institution_Commitment__c</fullName>
    <label>Post-Verto Institution Commitment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>