unpackaged/main/default/objects/Application__c/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>The first name that the applicant prefers to be called, e.g. a nickname</description>
    <label>Applicant Preferred First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>