unpackaged/main/default/objects/Application__c/fields/Preferred_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronouns__c</fullName>
    <label>Applicant Pronouns</label>
    <length>50</length>
    <type>Text</type>
</CustomField>