unpackaged/main/default/objects/Application__c/fields/Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity__c</fullName>
    <label>Race/Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Hispanic or Latin American</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>